@@ -1,0 +1,26 @@
+#!/sbin/runscript
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+if [[ -n "${TAP}" ]] ; then
+	DAEMONLOGGER_OPTS="${DAEMONLOGGER_OPTS} -o ${TAP}"
+fi
+
+depend() {
+	need net
+}
+
+start() {
+	ebegin "Starting daemonlogger on ${IFACE}"
+	start-stop-daemon --start --exec /usr/sbin/daemonlogger \
+	--pidfile /var/run/daemonlogger_$IFACE.pid --background \
+	-- -P /var/run -p daemonlogger_$IFACE.pid ${DAEMONLOGGER_OPTS}
+	eend $?
+}
+
+stop() {
+	ebegin "Stopping daemonlogger on ${IFACE}"
+	start-stop-daemon --stop --quiet --retry 5 --pidfile /var/run/daemonlogger_$IFACE.pid
+	eend $?
+}
