@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Nov 2007; Jukka Ruohonen <drear@iki.fi> +files/daemonlogger-confd,
+  +files/daemonlogger-initd, +daemonlogger-1.0-r1.ebuild:
+  Added init scripts and modified the ebuild accordingly.
+
   09 Nov 2007; Jakub Moc <jakub@gentoo.org> -daemonlogger-0.91.ebuild:
   Remove old.
 
